k8s/user-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: friend-net
spec:
  selector:
    app: user-service
  ports:
    - port: 8081
      targetPort: 8081
