k8s/user-service/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: users-public
  namespace: friend-net
spec:
  entryPoints:
    - web
  routes:
    # POST /users (создание), /users/search, /users/username/*
    - match: "(Path(`/users`) && Method(`POST`)) || PathPrefix(`/users/search`) || PathPrefix(`/users/username/`)"
      kind: Rule
      priority: 100
      services:
        - name: user-service
          port: 8081
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: users-private
  namespace: friend-net
spec:
  entryPoints:
    - web
  routes:
    - match: "PathPrefix(`/users`)"
      kind: Rule
      priority: 1
      middlewares:
        - name: jwt-auth
        - name: api-rate-limit
      services:
        - name: user-service
          port: 8081
